syntax = "proto3";


option java_package = "tech.ordinaryroad.live.chat.client.kuaishou.protobuf";

enum ClientId {
  NONE = 0;
  IPHONE = 1;
  ANDROID = 2;
  WEB = 3;
  PC = 6;
  IPHONE_LIVE_MATE = 8;
  ANDROID_LIVE_MATE = 9;
}