syntax = "proto3";
import "PicUrl.proto";

option java_package = "tech.ordinaryroad.live.chat.client.kuaishou.protobuf";

message UserInfo {
  uint64 userId = 1;
  string userName = 2;
  string userGender = 3;
  string userText = 4;
  repeated PicUrl headUrls = 5;
  bool verified = 6;
  string sUserId = 7;
  repeated PicUrl httpsHeadUrls = 8;
  string kwaiId = 9;

}