syntax = "proto3";
import "SimpleUserInfo.proto";
import "WebLiveAssistantType.proto";

option java_package = "tech.ordinaryroad.live.chat.client.kuaishou.protobuf";

message WebGiftFeed {
  string id = 1;
  SimpleUserInfo user = 2;
  uint64 time = 3;
  uint32 intGiftId = 4;
  uint64 sortRank = 5;
  string mergeKey = 6;
  uint32 batchSize = 7;
  uint32 comboCount = 8;
  uint32 rank = 9;
  uint64 expireDuration = 10;
  uint64 clientTimestamp = 11;
  uint64 slotDisplayDuration = 12;
  uint32 starLevel = 13;
  StyleType styleType = 14;
  WebLiveAssistantType liveAssistantType = 15;
  string deviceHash = 16;
  bool danmakuDisplay = 17;

enum StyleType {
  UNKNOWN_STYLE = 0;
  BATCH_STAR_0 = 1;
  BATCH_STAR_1 = 2;
  BATCH_STAR_2 = 3;
  BATCH_STAR_3 = 4;
  BATCH_STAR_4 = 5;
  BATCH_STAR_5 = 6;
  BATCH_STAR_6 = 7;
}
}